# PolySub-Cloud

./: .gitignore  Dockerfile  check_chars.py  cloud_worker.py  cloudbuild.yaml  core_processor.py  corrector.py  distributor.py  engine.py  full_english_text.txt  full_target_text.txt  grouper.py  index.html  main.py  matcher.py  normalizer.py  pyproject.toml  reproduce_issue_2c.py  requirements.txt  text_translator.py  transcriber.py  translation_evaluator.py  translation_quality_log.txt  utils.py  validation_log.txt  validator.py  video_processor.py
frontend/: .env.example  .gitignore  check_db.js  clear_jobs.js  cors.json  next.config.mjs  package-lock.json  package.json  set_cors.js  test_run.js
frontend/src/app/: global-error.tsx  globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(marketing)/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/app/: app-header.tsx  app-sidebar.tsx  credit-balance.tsx  job-status-badge.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/marketing/: contact-form.tsx  faq-accordion.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  pricing-cards.tsx
frontend/src/components/ui/: dropdown-menu.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: cloud-run.ts  constants.ts  firebase-admin.ts  firebase.ts  gcp.ts  gcs.ts  stripe.ts  types.ts
frontend/src/lib/firebase/: admin.ts  auth-context.tsx  auth.ts  (+1 more)
tests/: test_bifurcation.py  test_burn.py  test_repetition_trimmer.py
(+15 files in other folders)
