[project]
name = "subtitle-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepgram-captions>=1.2.0",
    "deepgram-sdk>=5.3.1",
    "fastapi>=0.128.0",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-firestore>=2.0.0",
    "ffmpeg-python>=0.2.0",
]
